--- a/remote_control/MDK-ARM/remote_control/remote_control.build_log.htm
+++ b/remote_control/MDK-ARM/remote_control/remote_control.build_log.htm
@@ -17,19 +17,19 @@ Library Manager: ArmAr.exe V6.19
 Hex Converter:   FromElf.exe V6.19
 CPU DLL:         SARMCM3.DLL V5.38.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
+Target DLL:      CMSIS_AGDI.dll V1.33.15.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Code\STM32\remote_control\MDK-ARM\remote_control.uvprojx
-Project File Date:  06/22/2023
+Project File Date:  06/30/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Program Files\Keil5\ARM\ARMCLANG\Bin'
 Build target 'remote_control'
 compiling main.c...
 linking...
-Program Size: Code=5842 RO-data=310 RW-data=64 ZI-data=1784  
+Program Size: Code=11900 RO-data=328 RW-data=88 ZI-data=2408  
 FromELF: creating hex file...
 "remote_control\remote_control.axf" - 0 Error(s), 0 Warning(s).
 
