--- a/remote_control/MDK-ARM/remote_control/remote_control.build_log.htm
+++ b/remote_control/MDK-ARM/remote_control/remote_control.build_log.htm
@@ -22,14 +22,15 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Code\STM32\remote_control\MDK-ARM\remote_control.uvprojx
-Project File Date:  06/30/2023
+Project File Date:  07/01/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Program Files\Keil5\ARM\ARMCLANG\Bin'
 Build target 'remote_control'
+compiling iwdg.c...
 compiling main.c...
 linking...
-Program Size: Code=11900 RO-data=328 RW-data=88 ZI-data=2408  
+Program Size: Code=11936 RO-data=328 RW-data=88 ZI-data=1912  
 FromELF: creating hex file...
 "remote_control\remote_control.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
